force-app/main/default/objects/Knowledge__kav/fields/Application_Owner__c.field-meta.xml
<CustomField>
    <fullName>Application_Owner__c</fullName>
    <description>SFP-10258: This field is to distinguish between Standard Bank owned applications and 3rd party owned applications.</description>
    <inlineHelpText>Select the relevant application owner for Solution, API Product and Insights.</inlineHelpText>
    <label>Application Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Bank</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>