force-app/main/default/objects/Knowledge__kav/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <description>SFP-7232 - Creates a link to the article so approvers can click through from the approval page</description>
    <formula>HYPERLINK(Id,  Title )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click on this link to get to the article</inlineHelpText>
    <label>Article Link</label>
    <type>Text</type>
</CustomField>