force-app/main/default/objects/Knowledge__kav/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>SFP-10259: This field is to distinguish the category a Solution, API Product or Insights should fall into.</description>
    <inlineHelpText>Select the relevant category for Solution, API Product and Insights.</inlineHelpText>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy &amp; Sustainability</fullName>
            </value>
            <value>
                <fullName>Loans &amp; Collateral</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Treasury &amp; Investments</fullName>
            </value>
            <value>
                <fullName>Support Services</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>