force-app/main/default/objects/Knowledge__kav/fields/Created_date__c.field-meta.xml
<CustomField>
    <fullName>Created_date__c</fullName>
    <description>This field is used to store the date the article was originally published and display it on the dashboard</description>
    <inlineHelpText>Enter the article published date.</inlineHelpText>
    <label>Created date</label>
    <type>Date</type>
</CustomField>