force-app/main/default/objects/Knowledge__kav/fields/External_url__c.field-meta.xml
<CustomField>
    <fullName>External_url__c</fullName>
    <description>This field is used to store the articles external link</description>
    <inlineHelpText>Enter the external link to the article</inlineHelpText>
    <label>External url</label>
    <type>Url</type>
</CustomField>