force-app/main/default/objects/Knowledge__kav/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used mark article as featured</description>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>