force-app/main/default/objects/Knowledge__kav/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>This field is used to store the article image and display it on the dashboard</description>
    <inlineHelpText>Insert the article image that is displayed on the OneHub Insights widget.</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>