force-app/main/default/objects/Knowledge__kav/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <description>Knowledge Info</description>
    <inlineHelpText>Knowledge Info</inlineHelpText>
    <label>Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>