force-app/main/default/objects/Knowledge__kav/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <description>OneHub: This field is used to store the description and information about the API Product, Solution and Insights</description>
    <inlineHelpText>Description for the Solution, API Product and Insight</inlineHelpText>
    <label>Introduction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>