force-app/main/default/objects/Knowledge__kav/fields/Is_coming_soon__c.field-meta.xml
<CustomField>
    <fullName>Is_coming_soon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneHub: This field indicates whether the Solution or API Product is Available or Coming Soon. (US-3979)</description>
    <label>Coming Soon</label>
    <type>Checkbox</type>
</CustomField>