force-app/main/default/objects/Knowledge__kav/fields/Is_Thought_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Is_Thought_Leadership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP- 10546 this field is used to render the tiles on the first section on the page.</description>
    <inlineHelpText>check true only for thought leadership articles.</inlineHelpText>
    <label>Thought Leadership</label>
    <type>Checkbox</type>
</CustomField>