force-app/main/default/objects/Knowledge__kav/fields/Key_Words__c.field-meta.xml
<CustomField>
    <fullName>Key_Words__c</fullName>
    <description>Used to suggest articles from mapped Case fields (fields cannot be picklist)</description>
    <inlineHelpText>Used to suggest articles from mapped Case fields</inlineHelpText>
    <label>Key Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>