force-app/main/default/objects/Knowledge__kav/fields/Large_Solution_Logo__c.field-meta.xml
<CustomField>
    <fullName>Large_Solution_Logo__c</fullName>
    <description>OneHub: This field is to store the large logo (144px by 144px) of the solution. (US-3979)</description>
    <inlineHelpText>Large logo</inlineHelpText>
    <label>Large Solution Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>