force-app/main/default/objects/Knowledge__kav/fields/Medium_Solution_Logo__c.field-meta.xml
<CustomField>
    <fullName>Medium_Solution_Logo__c</fullName>
    <description>OneHub: This field is to store the medium logo (72px by 72px) of the solution. (US-3979)</description>
    <label>Medium Solution Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>