force-app/main/default/objects/Knowledge__kav/fields/OSB_Country__c.field-meta.xml
<CustomField>
    <fullName>OSB_Country__c</fullName>
    <description>This field is used to define the Country/s which Solutions &amp; API&apos;s are available in, this will drive visibility on the dashboard.</description>
    <inlineHelpText>Which country/s is the Solution/API available in?</inlineHelpText>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OSB_Operating_Country</valueSetName>
    </valueSet>
</CustomField>