force-app/main/default/objects/Knowledge__kav/fields/OSB_Persona__c.field-meta.xml
<CustomField>
    <fullName>OSB_Persona__c</fullName>
    <description>This field is used to define the persona/s which Solutions &amp; API&apos;s are available to, this will drive visibility on the dashboard.</description>
    <inlineHelpText>Which persona/s is the Solution/API available to?</inlineHelpText>
    <label>Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>