force-app/main/default/objects/Knowledge__kav/fields/Podcast_URL__c.field-meta.xml
<CustomField>
    <fullName>Podcast_URL__c</fullName>
    <description>SFP- 10546 this field stores the url to the podcast site</description>
    <label>Podcast URL</label>
    <type>Url</type>
</CustomField>