force-app/main/default/objects/Knowledge__kav/fields/Requires_MFA__c.field-meta.xml
<CustomField>
    <fullName>Requires_MFA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OneHub: Requires Multi-factor Authentication to access this solution (SFP-8123)</description>
    <inlineHelpText>Requires Multi-factor Authentication to access this solution</inlineHelpText>
    <label>Requires MFA</label>
    <type>Checkbox</type>
</CustomField>