force-app/main/default/objects/Knowledge__kav/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Main section of knowledge base</description>
    <inlineHelpText>Main section of knowledge base</inlineHelpText>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Channels</fullName>
            </value>
            <value>
                <fullName>Investor Services</fullName>
            </value>
            <value>
                <fullName>Trade Finance</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Branches Network</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Pricing List</fullName>
            </value>
            <value>
                <fullName>Customer External Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>