force-app/main/default/objects/Knowledge__kav/fields/Sign_Up_URL__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_URL__c</fullName>
    <description>OneHub: URL link to the Solution Sign Up page. (US-3979)</description>
    <inlineHelpText>URL for Solution or API Product Sign Up</inlineHelpText>
    <label>Sign Up URL</label>
    <type>Url</type>
</CustomField>