force-app/main/default/objects/Knowledge__kav/fields/Solution_URL__c.field-meta.xml
<CustomField>
    <fullName>Solution_URL__c</fullName>
    <description>OneHub: URL link to the Solution Landing page. (US-3979)</description>
    <inlineHelpText>URL for the Solution Website</inlineHelpText>
    <label>Solution URL</label>
    <type>Url</type>
</CustomField>