force-app/main/default/objects/Knowledge__kav/fields/SSO_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>SSO_Redirect_URL__c</fullName>
    <description>OneHub: This field is for storing the redirect URL for Solutions that have Single Sign On with OneHub.</description>
    <inlineHelpText>Enter the Redirect URL for Single Sign On from OneHub.</inlineHelpText>
    <label>SSO Redirect URL</label>
    <type>Url</type>
</CustomField>