force-app/main/default/objects/Knowledge__kav/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <description>Sub-section of main section of knowledge base</description>
    <inlineHelpText>Sub-section of main section of knowledge base</inlineHelpText>
    <label>Sub-Section</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Section__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Customers</fullName>
            </value>
            <value>
                <fullName>Corporate Customers</fullName>
            </value>
            <value>
                <fullName>Term Deposits</fullName>
            </value>
            <value>
                <fullName>Savings Accounts</fullName>
            </value>
            <value>
                <fullName>Escrow Accounts</fullName>
            </value>
            <value>
                <fullName>Sweeping Accounts</fullName>
            </value>
            <value>
                <fullName>FAQ’s</fullName>
            </value>
            <value>
                <fullName>National Transfers</fullName>
            </value>
            <value>
                <fullName>International Transfers (Private Customers)</fullName>
            </value>
            <value>
                <fullName>International Transfers (Corporate Customers)</fullName>
            </value>
            <value>
                <fullName>IBAN / Swift Code</fullName>
            </value>
            <value>
                <fullName>Foreign Currency Notes Sale Process</fullName>
            </value>
            <value>
                <fullName>Customized / Non Customized Debit Card</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Internet Banking – Private Business (PB)</fullName>
            </value>
            <value>
                <fullName>Internet Banking - Business Banking (BB)</fullName>
            </value>
            <value>
                <fullName>Internet Banking – Corporate Business (CIB)</fullName>
            </value>
            <value>
                <fullName>ATM´s [PBB]</fullName>
            </value>
            <value>
                <fullName>POS [PBB]</fullName>
            </value>
            <value>
                <fullName>Cheques [PBB]</fullName>
            </value>
            <value>
                <fullName>OST (On Site Teller) [CIB]</fullName>
            </value>
            <value>
                <fullName>CIT (Cash in Transit) [CIB]</fullName>
            </value>
            <value>
                <fullName>Swift [CIB]</fullName>
            </value>
            <value>
                <fullName>PS2 [CIB]</fullName>
            </value>
            <value>
                <fullName>H2H via BOL (Pagamentos Domésticos) [CIB]</fullName>
            </value>
            <value>
                <fullName>H2H via ATG (Pagamentos Domésticos &amp; Cross-boarder) [CIB]</fullName>
            </value>
            <value>
                <fullName>Credit Products</fullName>
            </value>
            <value>
                <fullName>Interest Rates</fullName>
            </value>
            <value>
                <fullName>List of EVB Companies</fullName>
            </value>
            <value>
                <fullName>Credit Simulators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>