force-app/main/default/objects/Knowledge__kav/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>OneHub: This field stores the Product ID from the API Portal to generate the swagger. (US-3979)</description>
    <inlineHelpText>URL to generate API Detail page with Swagger</inlineHelpText>
    <label>Product ID</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>