force-app/main/default/objects/Knowledge__kav/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <description>SFP- 10546 this field stores the url to the video site</description>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>