force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_API_Product.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_API_Product</fullName>
    <active>true</active>
    <description>This record type is created for API Products</description>
    <label>Community Content – API Product</label>
</RecordType>