force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_Article.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_Article</fullName>
    <active>true</active>
    <description>Community Articles</description>
    <label>Community Content - Article</label>
</RecordType>