force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_FAQ.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_FAQ</fullName>
    <active>true</active>
    <label>Community Content - FAQ</label>
</RecordType>