force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_Insights.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_Insights</fullName>
    <active>true</active>
    <description>This page layout is used for the OneHub Community Content - Insights Knowledge Record Type to ensure that all relevant data required to display the Insights article on the dashboard is captured</description>
    <label>Community Content - Insights</label>
</RecordType>