force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_News.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_News</fullName>
    <active>true</active>
    <description>Community News</description>
    <label>Community Content - News</label>
</RecordType>