force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_Solution.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_Solution</fullName>
    <active>true</active>
    <description>This record type is created for Solutions</description>
    <label>Community Content – Solution</label>
</RecordType>