force-app/main/default/objects/Knowledge__kav/recordTypes/Community_Content_Success_Stories.recordType-meta.xml
<RecordType>
    <fullName>Community_Content_Success_Stories</fullName>
    <active>true</active>
    <label>Community Content - Success Stories</label>
</RecordType>