force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ.recordType-meta.xml
<RecordType>
    <fullName>FAQ</fullName>
    <active>true</active>
    <description>SFP-7231 - Used for Frequently Asked Questions articles</description>
    <label>FAQ</label>
</RecordType>