force-app/main/default/objects/Knowledge__kav/recordTypes/How_to_Guides.recordType-meta.xml
<RecordType>
    <fullName>How_to_Guides</fullName>
    <active>true</active>
    <description>SFP-7231 - Used for How to Guides articles</description>
    <label>How to Guides</label>
</RecordType>