force-app/main/default/objects/Knowledge__kav/recordTypes/Product_Info.recordType-meta.xml
<RecordType>
    <fullName>Product_Info</fullName>
    <active>true</active>
    <description>SFP-7231 - Used for Product Information articles</description>
    <label>Product Info</label>
</RecordType>