force-app/main/default/objects/Knowledge__kav/listViews/Draft_Articles_Portuguese.listView-meta.xml
<ListView>
    <fullName>Draft_Articles_Portuguese</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>pt_PT</value>
    </filters>
    <label>Draft Articles -Portuguese</label>
</ListView>