force-app/main/default/objects/Knowledge__kav/listViews/Published_Articles_Portuguese.listView-meta.xml
<ListView>
    <fullName>Published_Articles_Portuguese</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>RECORDTYPE</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>pt_PT</value>
    </filters>
    <label>Published Articles - Portuguese</label>
</ListView>