force-app/main/default/objects/Knowledge__kav/listViews/Service_Knowledge.listView-meta.xml
<ListView>
    <fullName>Service_Knowledge</fullName>
    <columns>TITLE</columns>
    <columns>RECORDTYPE</columns>
    <columns>LANGUAGE</columns>
    <filterScope>Everything</filterScope>
    <label>Service Knowledge</label>
</ListView>