force-app/main/default/objects/Knowledge__kav/listViews/South_Africa_Archived.listView-meta.xml
<ListView>
    <fullName>South_Africa_Archived</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OSB_Country__c</field>
        <operation>equals</operation>
        <value>South Africa</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>1. South Africa - Archived</label>
    <sharedTo>
        <role>CIB_Client_Experience_GM_SA_BU</role>
        <role>CIB_Client_Experience_GM_SA_Team</role>
        <role>CIB_Cross_Border_CoE_Team</role>
    </sharedTo>
</ListView>